# challenge

./: .gitignore  Makefile  README.md  ai.py  config.py  main.py  test.py
cpp/: CMakeLists.txt
cpp/include/checkers/: ai.h
cpp/src/: ai.cpp  python.cpp
